tests/fixtures/negative/skp1-non-monotonic-index.hex
534b50310101010000100000
0000000000000000000000000000000000000000000000000000000000000000
0000000000000000
000080000000000800000001
000000010000000001
00000000000000000000000000000000
